--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 STRONGEST_AVENGER=Thor
 PORT=8001
-CONNECTION_STRING=mongodb+srv://admin:admin@cluster0.tis34.mongodb.net/thepolyglotdeveloper?retryWrites=true&w=majority
+CONNECTION_STRING=mongodb+srv://<>:<>@cluster0.tis34.mongodb.net/thepolyglotdeveloper?retryWrites=true&w=majority
 SECRET_KEY=yash
